--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install:server": "npm install --prefix ./server",
     "install": "npm run install:client && npm run install:server",
     "start:client": "npm start --prefix ./client",
-    "start:server": "npm start --prefix ./service",
+    "start:server": "npm start --prefix ./server",
     "start": "npm run start:client && npm run start:server"
   },
   "repository": {
