--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "floating-vue": "^2.0.0-beta.20",
     "jmuxer": "^2.0.5",
     "socket.io-client": "^4.5.4",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
